--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			<div class="col-auto">
 				<a href="#"><img src="img/iconos/facebook.png" alt=""></a>
 				<a href="https://www.instagram.com/imagine_vrealities/"><img src="img/iconos/instagram.png" alt=""></a>
-				<a href="https://www.tiktok.com/@imaginerealitiescol"><img src="img/iconos/tiktok.png" alt=""></a>
+				<a href="https://www.tiktok.com/@imaginerealitiescol"><img src="img/iconos/whatsapp.png" alt=""></a>
 			</div>
 		</footer>
 	</div>
