--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>IMAGINE REALITIES</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700;800&family=Peralta&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700;800&family=Peralta&family=Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -16,19 +16,21 @@
 	</div>
 
 	<nav class="menu">
-		<a href="presentacion.html" >Nosotros</a>
-		<a href="#" >Servicios</a>
-		<a href="#" >Contactos</a>
-		<a href="#" >Inicio sesion</a>
+		<img src="img/logo sin fondo negro.png" height="75px" width="75px">
+		<a href="presentacion.html" >Integrantes</a>
+		<a href="#" >Portafolio</a>
+		<a href="#contacto" >Contactos</a>
+		<a href="#quienes-somos" >Nosotros</a>
 	</nav>
 
 	<main class="container">
 		<div class="row nosotros justify-content-center">
 			<div class="col-12 text-center">
+				<a name="quienes-somos"></a>
 				<h2 class="subtitulo"><span>¿Quienes somos?</span></h2>
-				<h3 class="titulo">"Una empresa es tan buena como la gente que trabaja en ella"</h3>
+				<img src="img/2.png" height="200px" width="200px">
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus doloremque ad velit obcaecati est, quae quasi. Voluptas aspernatur consequatur maiores blanditiis doloremque, ipsa quidem laboriosam accusamus natus fugiat beatae ipsum sit. Maiores eos nesciunt praesentium unde rerum cum enim ex vel officiis, impedit, necessitatibus temporibus fugit culpa aperiam. Accusantium, dolorem?
+					Somos un equipo colombiano especializado en el desarrollo de contenido virtual con enfasis en desarrollo de plataformas de realidad virtual, realidad aumentada y diseño web con enfasis en 3D. Nuestra intención es facilitarle a las compañias los procesos de educación, capacitación y publicidad a traves de las nuevas tecnologías emergentes.
 				</p>
 				<a href="#" class="enlace">Descubre tu proximo diseño</a>
 			</div>
@@ -36,9 +38,9 @@
 
 		<div class="row productos">
 			<article class="col-12 text-center">
-				<h2 class="subtitulo"><span>Lo que ofrecemos</span></h2>
-				<p class="titulo">Nuestro producto</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, perferendis ab laudantium similique doloremque. Qui sit earum ex, mollitia deserunt accusantium vero minima laborum autem nam distinctio beatae culpa labore doloribus libero officia tempora! Magnam fugiat pariatur recusandae excepturi repellendus? Odit asperiores soluta optio ex ab accusantium, repudiandae. Sit, atque.</p>
+				<h2 class="subtitulo">Lo que ofrecemos</h2>
+				<p class="titulo">Nuestros Servicios</p>
+				<p>Ofrecemos proyectos con las tecnologias emergentes que son la realidad virtual y la realidad aumentada para experiencias imersivas en empresas que lo requieran, tambien ofrecemos apoyo y diseño en pagina web con modelos 3D.</p>
 			</article>
 			<div class="col-12">
 				<div class="row justify-content-center">
@@ -99,9 +101,9 @@
 					<img src="img/iconos/10.png" alt="">
 					<figcaption>
 						<p>
-							<strong mb-2>Equipo de expertos</strong>
+							<strong mb-2>Equipo</strong>
 							<div class="w-100"></div>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cumque commodi dicta quo reprehenderit odio qui, incidunt explicabo eius possimus.
+							Somos Jovenes emprendedores con conocimientos en diferentes herramientas multimedia, programacion, modelado y de relacion con los videojuegos.
 						</p>
 					</figcaption>
 				</figure>
@@ -154,6 +156,7 @@
 		</section>
 
 		<footer class="row justify-content-center redes-sociales">
+			<a name="contacto"></a>
 			<div class="col-auto">
 				<a href="#"><img src="img/iconos/facebook.png" alt=""></a>
 				<a href="https://www.instagram.com/imagine_vrealities/"><img src="img/iconos/instagram.png" alt=""></a>
